--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <!-- success start -->
     <section class="success">
-        <div class="continer">
+        <div class="container">
             <div class="row">
                 <div class="col-6">
                     <div class="success-left">
